<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HappyHours</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_btn">Home</string>
    <string name="fav_btn">Favorite</string>
    <string name="list_btn">List</string>
    <string name="search_btn">Search</string>
    <string name="mallInfo_btn">Mall Info</string>
    <string name="floorPlan_btn">Floors</string>
    <string name="nearby_btn">Nearby</string>
    <string name="inbox_btn">Inbox</string>
    <string name="feedback_btn">Feedback</string>
    <string name="about_btn">About</string>
	<string name="phone_numbers">Phone Numbers</string>
    <string name="tap_number_to_call">Tap Number To Call</string>
	<string name="tap_more">More...</string>
    <string name="map_key">0ZCHoT7PqcJ2U9denB-ePCGhAMK_tRJaZaNRPlA</string>
    <string name="get_direction">Get Direction</string>
    <string name="tap_to_search">Tap here to search</string>
    <string name="add_to_contact">Add To Contact</string>
    <string name="add_to_reviews">Add Review</string>
    <string name="no_reviews">No Review</string>
    <string name="no_promo">No Promo</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="change_password">Change Password</string>
    <string name="setting_btn">Setting</string>
    	

</resources>
